# P-resto

./: README.md
M1/: CMakeLists.txt  main.cpp  variables.h
P1/: CMakeLists.txt  Persona.cpp  main.cpp
P4/: CMakeLists.txt  funciones.cpp  funciones.h  main.cpp  matematicas.h
P4/hola/: main.cpp
